@@ -6,6 +6,7 @@ Griffith ChangeLog
 
 2008-07-13  Michael Jahn
 	* updated DVDEmpire plugin
+	* [#236598] scroll bar in filter "by volume" appears
 
 2008-07-11  Michael Jahn
 	* added quick filter for tags
